@@ -30,7 +30,9 @@ EXTRA_DIST = \
     rts2-sensor-system.xml \
     rts2-sensor-apcups.xml \
     rts2-camd.xml \
-    rts2-focusd.xml
+    rts2-focusd.xml \
+    rts2-teld.xml \
+    rts2-simbadinfo.xml
 
 man_MANS = \
     rts2.7 \
@@ -62,7 +64,9 @@ man_MANS = \
     rts2-sensor-system.1 \
     rts2-sensor-apcups.1 \
     rts2-camd.7 \
-    rts2-focusd.7
+    rts2-focusd.7 \
+    rts2-teld.7 \
+    rts2-simbadinfo.1
 
 doc_FOP = \
     rts2-man.fop \
